[package]
name = "syncs3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.28"
aws-region = "0.24.1"
tokio = { version = "1", features = ["full"] }
# aws-config = "0.15.0"
# aws-sdk-dynamodb = "0.15.0"
# aws-sdk-s3 = "0.15.0"
# # rust-s3 = "0.11.0"
# druid = "0.6.0"
